src/less/main.less
@import "bootstrap.less";
@import "variables.less";
@import "booking-colours.less";

body {
  background: #FAFAFA;
}

header.container {
  padding: 0;

  @media (max-width: @screen-md-max) {
    h1 {
      padding: 0 10px;
    }
  }
}

.pages {
  & > .container {
    background: #FFF;
    box-shadow: 0px 1px 3px #CCC;
    margin-top: 0;
    margin-bottom: 10px;
    padding: 0px 20px 20px;

    @media (max-width: @screen-xs-max) {
      border-radius: 0;
    }
  }
}

.page-header {
  margin: 20px 0 10px;
  border-bottom: none 0;
}

.generator-priorities {
  ol {
    padding: 0;
    margin: 10px 15px;
  }

  li {
    cursor: move;
    padding: 10px;
    list-style: none;
    border: 1px solid @list-group-border;
    margin-top: -1px;

    &:hover, &.ui-sortable-helper {
      background: #EEE;

      & .hint {
        display: none;
      }
    }

    .glyphicon {
      cursor: pointer;
      padding: 0 10px;

      &.glyphicon-arrow-up {
        color: @btn-success-bg;
      }
      &.glyphicon-arrow-down {
        color: @btn-danger-bg;
      }
    }
  }
}

.generator-configuration {
  label {
    font-weight: normal;
  }

  ul {
    padding: 0;
    margin: 10px 15px;

    li {
      list-style: none inside;
      padding: 0 0 5px;
    }
  }
}

a.list-group-item {
  cursor: pointer;
  padding: 5px 15px;
}

.list-group-item.active .list-group-item-text, .list-group-item.active:hover .list-group-item-text, .list-group-item.active:focus .list-group-item-text, .active a.list-group-item, a.list-group-item.active .list-group-item-text, a.list-group-item.active:hover .list-group-item-text, a.list-group-item.active:focus .list-group-item-text {
  color: #fff;
  margin-bottom: 0;

}

fieldset.timeAndPlace {
  & label {
    font-weight: normal;
  }
  & li {
    list-style: none inside;
    margin-left: 0;
    padding-left: 0;
  }
  & ul {
    margin-left: 1.5em;
    padding-left: 0;
  }
}

table.topics {
  border-collapse: collapse;
  table-layout: fixed;

  td {
    vertical-align: middle !important;
    border: 0px none !important;
  }

  p {
    margin: 0;
    border: 0;
    padding: 0;
  }

  .filter {
    width: 150px;
  }
  .action {
    width: 100px;
  }

}

.chosen-topics {
}




.generated-timetables {
  & > .table {
    width: auto;

    & > thead > tr > th, & > tbody > tr > td {
      padding: 0 1em;
    }
    & > tbody > tr > td {
      padding: 1em 1em;
    }

    table.timetable {
      margin-bottom: 0;
    }
  }
}







@hours-in-day: 13;
@hour-height: 3em;
@half-hour-height: @hour-height/2;

@timetable-column-height: @hours-in-day * 2 * @half-hour-height;

timetable, timetable-mini {
  .hour {
    height: @hour-height;
  }
  .half-hour-marker {
    height: @half-hour-height;
  }

  &.normal {
    .hour {
      border: @table-border-color solid;
      border-width: 1px 0;
    }
  }


  &.mini {
    & > div {
      width: 100em;
    }

    font-size: 0.25em;

    booking {
      .glyphicon, p {
        opacity: 0;
        display: none;
      }

      &.locked {
        opacity: 0.5;
      }
    }

    .half-hour-marker,
    thead {
      display: none;
    }

    table.timetable {
      height: @hour-height * @hours-in-day;
    }

    table.timetable, td {
      border: 0 none !important;
    }
  }


  table {
    width: 100%;
    margin: 0;
    padding: 0;
    border: 0;
    table-layout: fixed;
  }

  .timetable {
    border: 1px solid @table-border-color;

    background: none;

    thead > tr:first-of-type > th {
      border: 1px solid @table-border-color;
      border-bottom: 0;
      padding: 10px;
      vertical-align: middle;
      text-align: center;
    }

    thead > tr > th,
    tbody > tr > th,
    tfoot > tr > th,
    thead > tr > td,
    tbody > tr > td,
    tfoot > tr > td {
      padding: 0;
    }

    thead > tr > td,
    tbody > tr > th {
      text-align: center;
    }

    table {
      border: 0;
    }

    table.grid {
      border-top: 1px solid @table-border-color;
      border-left: 1px solid @table-border-color;
      border-right: 0px;
      border-bottom: 0px;
    }

    .times {
      width: 5em;
    }


    .half-hour-marker {
      border-top: 1px solid @table-border-color !important;

      &:nth-child(even) td {
        border-top: 1px solid lighten(@table-border-color, 6%) !important;
      }
    }

    .timetable-column {
      position: relative;
      padding: 0;
      border-top-width: 0;

      table {
        height: 100%;
      }
    }

    .clashGroup {
      position: relative;
      height: 0;

      // Padding between bookings in a clashgroup
      td {
        padding-right: 2.5%;

        &:first-of-type {
          padding-left: 5%;
        }
        &:last-of-type {
          padding-right: 5%;
        }
      }

      .booking {
        position: relative;
        border-radius: @border-radius-base;

        .glyphicon-lock {
          float: right;
          margin: 0.4em;
          font-size: 0.7em;
        }

        p {
          display: block;
          padding: 0.5em;
          font-size: 0.9em;
        }

        &.locked {
          background-image: repeating-linear-gradient(135deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15) 10px, rgba(255, 255, 255, 0.3) 10px, rgba(255, 255, 255, 0.3) 20px);
        }
      }


    }
  }
}


#page #show-timetable {
  padding: 10px;

  .timetable {
    margin: 0;
  }
}

.ajax-loader {
  margin: 0 auto;
  text-align: center;
  text-align: center;
  display: block;
}



.hint {
  font-style: italic;
  opacity: 0.5;
}

span.subtle {
  font-size: 0.7em;
  color: #999;
}


.class-session .full {
  .glyphicon {
    font-weight: normal;
    font-weight: 100;
    padding-top: 0.4em;
    font-size: 0.8em;
  }
}


@container-tablet:             auto;
@container-sm:                 @container-tablet;

footer {
  p.copy {
    font-size: 0.8em;
  }

  &.container hr {
    margin: 5px 0 10px;
  }
}



div.fb-like {
  max-width: 300px;
}

